--- a/Config/Config_kaggle.ini
+++ b/Config/Config_kaggle.ini
@@ -1,7 +1,6 @@
 [Train]
-name_model: /kaggle/input/yolov9/yolov9c.pt
-
-data_config: /kaggle/working/Car_plate_detecting/config_dataset.yaml
+name_model: /kaggle/working/yolov9c.pt
+data_config: /kaggle/working/Car_plate_detecting/config_dataset_kaggle.yaml
 pretrained: true
 cos_lr: true
 project: /kaggle/working/logs
@@ -24,10 +23,9 @@ plots: true
 save_period: -1
 workers: 8
 
-
 [Test]
 model_path: /kaggle/working/logs/YOLO9c_CPD_ru/weights/YOLO9c_CPD_ru.pt
-data_config: /kaggle/working/Car_plate_detecting/config_dataset.yaml
+data_config: /kaggle/working/Car_plate_detecting/config_dataset_kaggle.yaml
 split: test
 imgsz: 640
 batch: 8
