--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -1,5 +1,5 @@
 [Train]
-name_model: /kaggle/input/yolov9/yolov9c.pt
+name_model: /kaggle/working/yolov9c.pt
 
 data_config: /kaggle/working/Car_plate_detecting/config_dataset.yaml
 pretrained: true
