--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -14,7 +14,7 @@ name: YOLO9c_CPD_ru
 optimizer: Adam
 close_mosaic: 10
 single_cls: true
-amp: false
+amp: true
 dropout: 0.3
 lr0: 0.001
 lrf: 1e-10
