--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -6,8 +6,9 @@ pretrained: true
 cos_lr: true
 project: /kaggle/working/logs
 epochs: 100
-batch: 32
-imgsz: 640
+batch: 16
+accumulate: 2
+imgsz: 512
 device: 0
 verbose: true
 name: YOLO9c_CPD_ru
@@ -22,7 +23,7 @@ warmup_epochs: 4
 augment: true
 plots: true
 save_period: -1
-workers: 8
+workers: 4
 
 
 [Test]
