--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -7,7 +7,7 @@ cos_lr: true
 project: /kaggle/working/logs
 epochs: 1
 batch: 8
-accumulate: 4
+# accumulate: 4
 imgsz: 640
 device: 0
 verbose: true
