--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -6,7 +6,8 @@ pretrained: true
 cos_lr: true
 project: /kaggle/working/logs
 epochs: 1
-batch: 8
+batch: 32
+# batch: 8
 # accumulate: 4
 imgsz: 640
 device: 0
